# python-can-waveshare-eth

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
can_waveshare/: bus.py
